welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: Missing closing brace `}' assumed here
def move(nbPas: Int,versLAvant:Boolean) {
^Program:10: error: expected class or object definition
def move(nbPas: Int,versLAvant:Boolean) {
^Program:16: error: Missing closing brace `}' assumed here
}
^