welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLAvant:Boolean) {
	for(i<-1 to 7){
		 if(versLAvant==nbPas){
		 	avance(); 
		 	return nbPas;	
	} 
 }
}
def move(nbPas: Int,versLAvant:Boolean) {
	for(i<-1 to 7){
		 if(versLAvant!=nbPas){
		 	recule();
		 	return nbPas;